SosialTerefdasliq: overflow fixed

--- a/src/layout/SosialTerefdasliq/Container/index.module.scss
+++ b/src/layout/SosialTerefdasliq/Container/index.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 10rem;
+  overflow-x: hidden;
 
   @media only screen and (max-width: 992px) {
     padding-inline: 2rem;
