--- a/src/layout/commonlayout/SonXeberler/index.module.scss
+++ b/src/layout/commonlayout/SonXeberler/index.module.scss
@@ -6,6 +6,7 @@
   row-gap: 1rem;
 
   .sectionTitle {
+    padding-left: 2rem;
     font-size: 40px;
     font-weight: 400;
     line-height: 46px;
